# SimUI

./: .gitignore  CMakeLists.txt  README.md  main_linux.cpp  main_win.cpp  sim_ui.cpp  sim_ui.h
mapdata/: FourWaySignal.xml
